deployment.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: pokeapp-army
spec: 
  replicas: 2
  selector: 
    matchLabels: 
      app: PokeApp
  template: 
    metadata: 
      labels: 
        app: PokeApp 
    spec: 
      containers: 
      - name: pokeapp-container 
        image:  mateocolombo/pokeapp:1.1.2
        ports: 
        - containerPort: 443
---
apiVersion: v1 
kind: Service 
metadata: 
  name: pokeapp-service
spec: 
  ports: 
    - protocol: TCP
      port: 8080
      targetPort: 443
  selector: 
    app: PokeApp
  type: ClusterIP
