ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: mateo-ingress 
spec: 
  ingressClassName: nginx 
  rules: 
    - host: "mateo.modelodevops.sociuschile.cl" 
      http: 
        paths: 
          - backend: 
              service: 
                name: pokeapp-service 
                port: 
                  number: 80 
            path: / 
            pathType: Prefix
